# nix-shell-template

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  shell.nix
.direnv/: nix-profile-26.05-zkrz054gvl1dcxkw  nix-profile-26.05-zkrz054gvl1dcxkw.rc
